--- a/week2/ProblemSet2_Solutions.ipynb
+++ b/week2/ProblemSet2_Solutions.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -195,35 +195,35 @@
     "class MinHeap:\n",
     "    def __init__(self):\n",
     "        self.H = [None]\n",
-    " \n",
+    "\n",
     "    def size(self):\n",
     "        return len(self.H)-1\n",
-    "    \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return str(self.H[1:])\n",
-    "        \n",
+    "\n",
     "    def satisfies_assertions(self):\n",
     "        for i in range(2, len(self.H)):\n",
     "            assert self.H[i] >= self.H[i//2],  f'Min heap property fails at position {i//2}, parent elt: {self.H[i//2]}, child elt: {self.H[i]}'\n",
-    "    \n",
+    "\n",
     "    def min_element(self):\n",
     "        return self.H[1]\n",
     "\n",
     "    ## bubble_up function at index\n",
-    "    ## WARNING: this function has been cut and paste for the next problem as well \n",
+    "    ## WARNING: this function has been cut and paste for the next problem as well\n",
     "    def bubble_up(self, index):\n",
     "        assert index >= 1\n",
-    "        if index == 1: \n",
-    "            return \n",
+    "        if index == 1:\n",
+    "            return\n",
     "        parent_index = index // 2\n",
     "        if self.H[parent_index] < self.H[index]:\n",
-    "            return \n",
+    "            return\n",
     "        else:\n",
     "            self.H[parent_index], self.H[index] = self.H[index], self.H[parent_index]\n",
     "            self.bubble_up(parent_index)\n",
-    "    \n",
+    "\n",
     "    ## bubble_down function at index\n",
-    "    ## WARNING: this function has been cut and paste for the next problem as well \n",
+    "    ## WARNING: this function has been cut and paste for the next problem as well\n",
     "    def bubble_down(self, index):\n",
     "        assert index >= 1 and index < len(self.H)\n",
     "        lchild_index = 2 * index\n",
@@ -234,33 +234,79 @@
     "        rchild_value = self.H[rchild_index] if rchild_index < len(self.H) else float('inf')\n",
     "        # If the value at the index is lessthan or equal to the minimum of two children, then nothing else to do\n",
     "        if self.H[index] <= min(lchild_value, rchild_value):\n",
-    "            return \n",
+    "            return\n",
     "        # Otherwise, find the index and value of the smaller of the two children.\n",
-    "        # A useful python trick is to compare \n",
+    "        # A useful python trick is to compare\n",
     "        min_child_value, min_child_index = min ((lchild_value, lchild_index), (rchild_value, rchild_index))\n",
     "        # Swap the current index with the least of its two children\n",
     "        self.H[index], self.H[min_child_index] = self.H[min_child_index], self.H[index]\n",
     "        # Bubble down on the minimum child index\n",
     "        self.bubble_down(min_child_index)\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "    # Function: heap_insert\n",
     "    # Insert elt into heap\n",
     "    # Use bubble_up/bubble_down function\n",
     "    def insert(self, elt):\n",
+    "        self.H.append(elt)\n",
+    "        self.bubble_up(len(self.H)-1)\n",
     "        # your code here\n",
-    "        \n",
-    "        \n",
+    "\n",
+    "\n",
     "    # Function: heap_delete_min\n",
     "    # delete the smallest element in the heap. Use bubble_up/bubble_down\n",
     "    def delete_min(self):\n",
     "        # your code here\n",
-    "        \n"
+    "        if (self.size() != 1):\n",
+    "            self.H[1] = self.H[self.size()]\n",
+    "            self.H.pop(self.size())\n",
+    "            self.bubble_down(1)\n",
+    "        else:\n",
+    "            self.H.pop(1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting: 5, 2, 4, -1 and 7 in that order.\n",
+      "\t Heap = [5]\n",
+      "\t Heap = [2, 5]\n",
+      "\t Heap = [2, 5, 4]\n",
+      "\t Heap = [-1, 2, 4, 5]\n",
+      "\t Heap = [-1, 2, 4, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "h = MinHeap()\n",
+    "print('Inserting: 5, 2, 4, -1 and 7 in that order.')\n",
+    "h.insert(5)\n",
+    "print(f'\\t Heap = {h}')\n",
+    "assert(h.min_element() == 5)\n",
+    "h.insert(2)\n",
+    "print(f'\\t Heap = {h}')\n",
+    "assert(h.min_element() == 2)\n",
+    "h.insert(4)\n",
+    "print(f'\\t Heap = {h}')\n",
+    "assert(h.min_element() == 2)\n",
+    "h.insert(-1)\n",
+    "print(f'\\t Heap = {h}')\n",
+    "assert(h.min_element() == -1)\n",
+    "h.insert(7)\n",
+    "print(f'\\t Heap = {h}')\n",
+    "assert(h.min_element() == -1)\n",
+    "h.satisfies_assertions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -276,7 +322,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting: 5, 2, 4, -1 and 7 in that order.\n",
+      "\t Heap = [5]\n",
+      "\t Heap = [2, 5]\n",
+      "\t Heap = [2, 5, 4]\n",
+      "\t Heap = [-1, 2, 4, 5]\n",
+      "\t Heap = [-1, 2, 4, 5, 7]\n",
+      "Deleting minimum element\n",
+      "\t Heap = [2, 5, 4, 7]\n",
+      "\t Heap = [4, 5, 7]\n",
+      "\t Heap = [5, 7]\n",
+      "\t Heap = [7]\n",
+      "\t Heap = []\n",
+      "All tests passed: 10 points!\n"
+     ]
+    }
+   ],
    "source": [
     "h = MinHeap()\n",
     "print('Inserting: 5, 2, 4, -1 and 7 in that order.')\n",
@@ -318,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -335,21 +401,21 @@
    "outputs": [],
    "source": [
     "class TopKHeap:\n",
-    "    \n",
+    "\n",
     "    # The constructor of the class to initialize an empty data structure\n",
     "    def __init__(self, k):\n",
     "        self.k = k\n",
     "        self.A = []\n",
     "        self.H = MinHeap()\n",
-    "        \n",
-    "    def size(self): \n",
+    "\n",
+    "    def size(self):\n",
     "        return len(self.A) + (self.H.size())\n",
-    "    \n",
+    "\n",
     "    def get_jth_element(self, j):\n",
     "        assert 0 <= j < self.k-1\n",
     "        assert j < self.size()\n",
     "        return self.A[j]\n",
-    "    \n",
+    "\n",
     "    def satisfies_assertions(self):\n",
     "        # is self.A sorted\n",
     "        for i in range(len(self.A) -1 ):\n",
@@ -359,12 +425,12 @@
     "        # is every element of self.A less than or equal to each element of self.H\n",
     "        for i in range(len(self.A)):\n",
     "            assert self.A[i] <= self.H.min_element(), f'Array element A[{i}] = {self.A[i]} is larger than min heap element {self.H.min_element()}'\n",
-    "        \n",
+    "\n",
     "    # Function : insert_into_A\n",
     "    # This is a helper function that inserts an element `elt` into `self.A`.\n",
     "    # whenever size is < k,\n",
     "    #       append elt to the end of the array A\n",
-    "    # Move the element that you just added at the very end of \n",
+    "    # Move the element that you just added at the very end of\n",
     "    # array A out into its proper place so that the array A is sorted.\n",
     "    # return the \"displaced last element\" jHat (None if no element was displaced)\n",
     "    def insert_into_A(self, elt):\n",
@@ -375,10 +441,10 @@
     "        while (j >= 1 and self.A[j] < self.A[j-1]):\n",
     "            # Swap A[j] and A[j-1]\n",
     "            (self.A[j], self.A[j-1]) = (self.A[j-1], self.A[j])\n",
-    "            j = j -1 \n",
+    "            j = j -1\n",
     "        return\n",
-    "    \n",
-    "            \n",
+    "\n",
+    "\n",
     "    # Function: insert -- insert an element into the data structure.\n",
     "    # Code to handle when self.size < self.k is already provided\n",
     "    def insert(self, elt):\n",
@@ -386,11 +452,22 @@
     "        # If we have fewer than k elements, handle that in a special manner\n",
     "        if size <= self.k:\n",
     "            self.insert_into_A(elt)\n",
-    "            return \n",
+    "            return\n",
     "        # Code up your algorithm here.\n",
     "        # your code here\n",
-    "        \n",
-    "        \n",
+    "        else:\n",
+    "            if elt < self.A[self.k - 1]:\n",
+    "                tmp  = self.A[self.k - 1]\n",
+    "                self.A[self.k - 1] = elt\n",
+    "                j = len(self.A)-1\n",
+    "                while (j >= 1 and self.A[j] < self.A[j-1]):\n",
+    "                    # Swap A[j] and A[j-1]\n",
+    "                    (self.A[j], self.A[j-1]) = (self.A[j-1], self.A[j])\n",
+    "                    j = j - 1\n",
+    "                self.H.insert(tmp)\n",
+    "            else:\n",
+    "                self.H.insert(elt)\n",
+    "\n",
     "    # Function: Delete top k -- delete an element from the array A\n",
     "    # In particular delete the j^{th} element where j = 0 means the least element.\n",
     "    # j must be in range 0 to self.k-1\n",
@@ -400,14 +477,17 @@
     "        assert j >= 0\n",
     "        assert j < self.k\n",
     "        # your code here\n",
-    "        \n",
-    "    \n",
-    "    "
+    "        self.A.append(self.H.min_element())\n",
+    "        self.H.delete_min()\n",
+    "        self.A.pop(len(self.A) - j)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -423,7 +503,37 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial data structure: \n",
+      "\t A =  [-10, -9, -8, -4, 0]\n",
+      "\t H =  [1, 4, 5, 6, 15, 22, 31, 7]\n",
+      "Test 1: Inserting element -2\n",
+      "\t A =  [-10, -9, -8, -4, -2]\n",
+      "\t H =  [0, 1, 5, 4, 15, 22, 31, 7, 6]\n",
+      "Test2: Inserting element -11\n",
+      "\t A =  [-11, -10, -9, -8, -4]\n",
+      "\t H =  [-2, 0, 5, 4, 1, 22, 31, 7, 6, 15]\n",
+      "Test 3 delete_top_k(3)\n",
+      "\t A =  [-11, -9, -8, -4, -2]\n",
+      "\t H =  [0, 1, 5, 4, 15, 22, 31, 7, 6]\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week2\\ProblemSet2_Solutions.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m H = \u001b[39m\u001b[39m'\u001b[39m, h\u001b[39m.\u001b[39mH)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m h\u001b[39m.\u001b[39msatisfies_assertions()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39massert\u001b[39;00m h\u001b[39m.\u001b[39mA \u001b[39m==\u001b[39m [\u001b[39m-\u001b[39m\u001b[39m11\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m9\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m4\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39massert\u001b[39;00m h\u001b[39m.\u001b[39mH\u001b[39m.\u001b[39mmin_element() \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m h\u001b[39m.\u001b[39msatisfies_assertions()\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "h = TopKHeap(5)\n",
     "# Force the array A\n",
@@ -995,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
