--- a/week2/ProblemSet2_Solutions.ipynb
+++ b/week2/ProblemSet2_Solutions.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 82,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -248,9 +248,9 @@
     "    # Insert elt into heap\n",
     "    # Use bubble_up/bubble_down function\n",
     "    def insert(self, elt):\n",
+    "        # your code here\n",
     "        self.H.append(elt)\n",
     "        self.bubble_up(len(self.H)-1)\n",
-    "        # your code here\n",
     "\n",
     "\n",
     "    # Function: heap_delete_min\n",
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 84,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -477,17 +477,14 @@
     "        assert j >= 0\n",
     "        assert j < self.k\n",
     "        # your code here\n",
+    "        self.A.pop(j)\n",
     "        self.A.append(self.H.min_element())\n",
-    "        self.H.delete_min()\n",
-    "        self.A.pop(len(self.A) - j)\n",
-    "\n",
-    "\n",
-    "\n"
+    "        self.H.delete_min()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -518,19 +515,18 @@
       "\t A =  [-11, -10, -9, -8, -4]\n",
       "\t H =  [-2, 0, 5, 4, 1, 22, 31, 7, 6, 15]\n",
       "Test 3 delete_top_k(3)\n",
-      "\t A =  [-11, -9, -8, -4, -2]\n",
-      "\t H =  [0, 1, 5, 4, 15, 22, 31, 7, 6]\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week2\\ProblemSet2_Solutions.ipynb Cell 11\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m H = \u001b[39m\u001b[39m'\u001b[39m, h\u001b[39m.\u001b[39mH)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m h\u001b[39m.\u001b[39msatisfies_assertions()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=34'>35</a>\u001b[0m \u001b[39massert\u001b[39;00m h\u001b[39m.\u001b[39mA \u001b[39m==\u001b[39m [\u001b[39m-\u001b[39m\u001b[39m11\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m10\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m9\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m4\u001b[39m,\u001b[39m-\u001b[39m\u001b[39m2\u001b[39m]\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=35'>36</a>\u001b[0m \u001b[39massert\u001b[39;00m h\u001b[39m.\u001b[39mH\u001b[39m.\u001b[39mmin_element() \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week2/ProblemSet2_Solutions.ipynb#X12sZmlsZQ%3D%3D?line=36'>37</a>\u001b[0m h\u001b[39m.\u001b[39msatisfies_assertions()\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "\t A =  [-11, -10, -9, -4, -2]\n",
+      "\t H =  [0, 1, 5, 4, 15, 22, 31, 7, 6]\n",
+      "Test 4 delete_top_k(4)\n",
+      "\t A =  [-11, -10, -9, -4, 0]\n",
+      "\t H =  [1, 4, 5, 6, 15, 22, 31, 7]\n",
+      "Test 5 delete_top_k(0)\n",
+      "\t A =  [-10, -9, -4, 0, 1]\n",
+      "\t H =  [4, 6, 5, 7, 15, 22, 31]\n",
+      "Test 6 delete_top_k(1)\n",
+      "\t A =  [-10, -4, 0, 1, 4]\n",
+      "\t H =  [5, 6, 22, 7, 15, 31]\n",
+      "All tests passed - 15 points!\n"
      ]
     }
    ],
@@ -729,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -748,48 +744,75 @@
     "class MaxHeap:\n",
     "    def __init__(self):\n",
     "        self.H = [None]\n",
-    "        \n",
+    "\n",
     "    def size(self):\n",
     "        return len(self.H)-1\n",
-    "    \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return str(self.H[1:])\n",
-    "        \n",
+    "\n",
     "    def satisfies_assertions(self):\n",
     "        for i in range(2, len(self.H)):\n",
     "            assert self.H[i] <= self.H[i//2],  f'Maxheap property fails at position {i//2}, parent elt: {self.H[i//2]}, child elt: {self.H[i]}'\n",
-    "    \n",
+    "\n",
     "    def max_element(self):\n",
     "        return self.H[1]\n",
-    "    \n",
+    "\n",
     "    def bubble_up(self, index):\n",
     "        # your code here\n",
-    "        \n",
-    "            \n",
-    "    \n",
+    "        assert index >= 1\n",
+    "        if index == 1:\n",
+    "            return\n",
+    "        parent_index = index // 2\n",
+    "        if self.H[parent_index] > self.H[index]:\n",
+    "            return\n",
+    "        else:\n",
+    "            self.H[parent_index], self.H[index] = self.H[index], self.H[parent_index]\n",
+    "            self.bubble_up(parent_index)\n",
+    "\n",
     "    def bubble_down(self, index):\n",
     "        # your code here\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "    \n",
+    "        assert index >= 1 and index < len(self.H)\n",
+    "        lchild_index = 2 * index\n",
+    "        rchild_index = 2 * index + 1\n",
+    "        # set up the value of left child to the element at that index if valid, or else make it -Infinity\n",
+    "        lchild_value = self.H[lchild_index] if lchild_index < len(self.H) else float('-inf')\n",
+    "        # set up the value of right child to the element at that index if valid, or else make it -Infinity\n",
+    "        rchild_value = self.H[rchild_index] if rchild_index < len(self.H) else float('-inf')\n",
+    "        # If the value at the index is greater than or equal to the max of two children, then nothing else to do\n",
+    "        if self.H[index] >= max(lchild_value, rchild_value):\n",
+    "            return\n",
+    "        # Otherwise, find the index and value of the larger of the two children.\n",
+    "        # A useful python trick is to compare\n",
+    "        max_child_value, max_child_index = max ((lchild_value, lchild_index), (rchild_value, rchild_index))\n",
+    "        # Swap the current index with the greatest of its two children\n",
+    "        self.H[index], self.H[max_child_index] = self.H[max_child_index], self.H[index]\n",
+    "        # Bubble down on the largest child index\n",
+    "        self.bubble_down(max_child_index)\n",
+    "\n",
     "    # Function: insert\n",
     "    # Insert elt into minheap\n",
     "    # Use bubble_up/bubble_down function\n",
     "    def insert(self, elt):\n",
     "        # your code here\n",
-    "        \n",
-    "        \n",
+    "        self.H.append(elt)\n",
+    "        self.bubble_up(len(self.H)-1)\n",
+    "\n",
     "    # Function: delete_max\n",
     "    # delete the largest element in the heap. Use bubble_up/bubble_down\n",
     "    def delete_max(self):\n",
     "        # your code here\n",
-    "        "
+    "        if (self.size() != 1):\n",
+    "            self.H[1] = self.H[self.size()]\n",
+    "            self.H.pop(self.size())\n",
+    "            self.bubble_down(1)\n",
+    "        else:\n",
+    "            self.H.pop(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -805,7 +828,27 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting: 5, 2, 4, -1 and 7 in that order.\n",
+      "\t Heap = [5]\n",
+      "\t Heap = [5, 2]\n",
+      "\t Heap = [5, 2, 4]\n",
+      "\t Heap = [5, 2, 4, -1]\n",
+      "\t Heap = [7, 5, 4, -1, 2]\n",
+      "Deleting maximum element\n",
+      "\t Heap = [5, 2, 4, -1]\n",
+      "\t Heap = [4, 2, -1]\n",
+      "\t Heap = [2, -1]\n",
+      "\t Heap = [-1]\n",
+      "\t Heap = []\n",
+      "All tests passed: 5 points!\n"
+     ]
+    }
+   ],
    "source": [
     "h = MaxHeap()\n",
     "print('Inserting: 5, 2, 4, -1 and 7 in that order.')\n",
@@ -847,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -867,24 +910,24 @@
     "    def __init__(self):\n",
     "        self.hmin = MinHeap()\n",
     "        self.hmax = MaxHeap()\n",
-    "        \n",
+    "\n",
     "    def satisfies_assertions(self):\n",
     "        if self.hmin.size() == 0:\n",
     "            assert self.hmax.size() == 0\n",
-    "            return \n",
+    "            return\n",
     "        if self.hmax.size() == 0:\n",
     "            assert self.hmin.size() == 1\n",
-    "            return \n",
+    "            return\n",
     "        # 1. min heap min element >= max heap max element\n",
     "        assert self.hmax.max_element() <= self.hmin.min_element(), f'Failed: Max element of max heap = {self.hmax.max_element()} > min element of min heap {self.hmin.min_element()}'\n",
     "        # 2. size of max heap must be equal or one lessthan min heap.\n",
     "        s_min = self.hmin.size()\n",
     "        s_max = self.hmax.size()\n",
     "        assert (s_min == s_max or s_max  == s_min -1 ), f'Heap sizes are unbalanced. Min heap size = {s_min} and Maxheap size = {s_max}'\n",
-    "    \n",
+    "\n",
     "    def __repr__(self):\n",
     "        return 'Maxheap:' + str(self.hmax) + ' Minheap:'+str(self.hmin)\n",
-    "    \n",
+    "\n",
     "    def get_median(self):\n",
     "        if self.hmin.size() == 0:\n",
     "            assert self.hmax.size() == 0, 'Sizes are not balanced'\n",
@@ -893,8 +936,12 @@
     "            assert self.hmin.size() == 1, 'Sizes are not balanced'\n",
     "            return self.hmin.min_element()\n",
     "        # your code here\n",
-    "        \n",
-    "    \n",
+    "        if self.hmin.size() != self.hmax.size():\n",
+    "            return self.hmin.min_element()\n",
+    "        else:\n",
+    "            return ((self.hmin.min_element() + self.hmax.max_element())/2)\n",
+    "\n",
+    "\n",
     "    # function: balance_heap_sizes\n",
     "    # ensure that the size of hmax == size of hmin or size of hmax +1 == size of hmin\n",
     "    # If the condition above does not hold, move the max element from max heap into the min heap or\n",
@@ -902,14 +949,25 @@
     "    # This function could be called from insert/delete_median methods\n",
     "    def balance_heap_sizes(self):\n",
     "        # your code here\n",
-    "        \n",
-    "    \n",
+    "        diff = self.hmin.size() - self.hmax.size()\n",
+    "        if (diff == 0 or diff == 1):\n",
+    "            return\n",
+    "        while diff > 1:\n",
+    "            self.hmax.insert(self.hmin.min_element())\n",
+    "            self.hmin.delete_min()\n",
+    "            diff = self.hmin.size() - self.hmax.size()\n",
+    "        while diff < 0:\n",
+    "            self.hmin.insert(self.hmax.max_element())\n",
+    "            self.hmax.delete_max()\n",
+    "            diff = self.hmin.size() - self.hmax.size()\n",
+    "        return\n",
+    "\n",
     "    def insert(self, elt):\n",
     "        # Handle the case when either heap is empty\n",
     "        if self.hmin.size() == 0:\n",
     "            # min heap is empty -- directly insert into min heap\n",
     "            self.hmin.insert(elt)\n",
-    "            return \n",
+    "            return\n",
     "        if self.hmax.size() == 0:\n",
     "            # max heap is empty -- this better happen only if min heap has size 1.\n",
     "            assert self.hmin.size() == 1\n",
@@ -923,11 +981,16 @@
     "            else:\n",
     "                # Element goes into the max heap -- just insert it there.\n",
     "                self.hmax.insert(elt)\n",
-    "            return \n",
+    "            return\n",
     "        # Now assume both heaps are non-empty\n",
     "        # your code here\n",
-    "        \n",
-    "        \n",
+    "        if(elt >= self.hmin.min_element()):\n",
+    "            self.hmin.insert(elt)\n",
+    "        else:\n",
+    "            self.hmax.insert(elt)\n",
+    "        self.balance_heap_sizes()\n",
+    "\n",
+    "\n",
     "    def delete_median(self):\n",
     "        self.hmax.delete_max()\n",
     "        self.balance_heap_sizes()"
@@ -935,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -951,7 +1014,32 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inserting 1, 5, 2, 4, 18, -4, 7, 9\n",
+      "Maxheap:[] Minheap:[1]\n",
+      "1\n",
+      "Maxheap:[1] Minheap:[5]\n",
+      "3.0\n",
+      "Maxheap:[1] Minheap:[2, 5]\n",
+      "2\n",
+      "Maxheap:[2, 1] Minheap:[4, 5]\n",
+      "3.0\n",
+      "Maxheap:[2, 1] Minheap:[4, 5, 18]\n",
+      "4\n",
+      "Maxheap:[2, 1, -4] Minheap:[4, 5, 18]\n",
+      "3.0\n",
+      "Maxheap:[2, 1, -4] Minheap:[4, 5, 18, 7]\n",
+      "4\n",
+      "Maxheap:[4, 2, -4, 1] Minheap:[5, 7, 18, 9]\n",
+      "4.5\n",
+      "All tests passed: 15 points\n"
+     ]
+    }
+   ],
    "source": [
     "m = MedianMaintainingHeap()\n",
     "print('Inserting 1, 5, 2, 4, 18, -4, 7, 9')\n",
