--- a/week3/ProblemSet3_Solutions.ipynb
+++ b/week3/ProblemSet3_Solutions.ipynb
@@ -761,29 +761,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week3\\ProblemSet3_Solutions.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m H \u001b[39m=\u001b[39m return_random_hash_function(\u001b[39m5\u001b[39;49m,\u001b[39m4\u001b[39;49m)\n",
-      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week3\\ProblemSet3_Solutions.ipynb Cell 24\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m rand \u001b[39m=\u001b[39m random()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m \u001b[39mif\u001b[39;00m rand \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m \u001b[39m0.5\u001b[39m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m     lsta\u001b[39m.\u001b[39;49mappend(\u001b[39m0\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=32'>33</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X36sZmlsZQ%3D%3D?line=33'>34</a>\u001b[0m     lsta\u001b[39m.\u001b[39mappend(\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 1, 0], [0, 1, 0, 0], [0, 0, 0, 1], [1, 1, 1, 1], [1, 1, 0, 0]]\n"
      ]
     }
    ],
    "source": [
-    "H = return_random_hash_function(5,4)"
+    "H = return_random_hash_function(5,4)\n",
+    "print(H)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 91,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -806,19 +802,10 @@
      "text": [
       "c1= [1, 1, 0]\n",
       "c2= [1, 0]\n",
-      "c3= [1, 0]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'builtin_function_or_method' object has no attribute 'getrandbits'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week3\\ProblemSet3_Solutions.ipynb Cell 24\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mc3=\u001b[39m\u001b[39m'\u001b[39m, c3)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39massert\u001b[39;00m c3 \u001b[39m==\u001b[39m [\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m], \u001b[39m'\u001b[39m\u001b[39mTest 3 failed\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=18'>19</a>\u001b[0m H \u001b[39m=\u001b[39m return_random_hash_function(\u001b[39m5\u001b[39;49m,\u001b[39m4\u001b[39;49m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mH=\u001b[39m\u001b[39m'\u001b[39m, H)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m \u001b[39massert\u001b[39;00m \u001b[39mlen\u001b[39m(H) \u001b[39m==\u001b[39m \u001b[39m5\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mTest 5 failed\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[1;32mc:\\Users\\nxf97494\\Documents\\Training\\Colorado\\AlgSearchSortIndex\\week3\\ProblemSet3_Solutions.ipynb Cell 24\u001b[0m line \u001b[0;36m3\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     lsta \u001b[39m=\u001b[39m []\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mwhile\u001b[39;00m j \u001b[39m<\u001b[39m n:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=29'>30</a>\u001b[0m         lsta\u001b[39m.\u001b[39mappend(random\u001b[39m.\u001b[39;49mgetrandbits(\u001b[39m1\u001b[39m))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=30'>31</a>\u001b[0m     H\u001b[39m.\u001b[39mappend(lsta)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/nxf97494/Documents/Training/Colorado/AlgSearchSortIndex/week3/ProblemSet3_Solutions.ipynb#X30sZmlsZQ%3D%3D?line=31'>32</a>\u001b[0m \u001b[39mreturn\u001b[39;00m H\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'builtin_function_or_method' object has no attribute 'getrandbits'"
+      "c3= [1, 0]\n",
+      "H= [[1, 1, 1, 1], [1, 0, 1, 1], [1, 0, 0, 0], [1, 0, 0, 0], [0, 0, 1, 0]]\n",
+      "H2= [[1, 0, 1], [0, 1, 0], [0, 0, 1], [0, 0, 0], [1, 0, 1], [1, 0, 0]]\n",
+      "Tests passed: 10 points!\n"
      ]
     }
    ],
